fixed descr font size on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -164,7 +164,7 @@ p{
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .description{
-    font-size:10px;
+  font-size:19px;
   }
 }
 
